==> AnQ-LH/stm32g431-nucleo/User/src/bsp_uart.c <==
#include "bsp_uart.h"
#include "bsp.h"
#define USART1_CLK_ENABLE()              LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_USART1);
#define USART1_TX_GPIO_CLK_ENABLE()      LL_AHB2_GRP1_EnableClock(LL_AHB2_GRP1_PERIPH_GPIOA);
#define USART1_TX_GPIO_PORT              GPIOA
#define USART1_TX_PIN                    LL_GPIO_PIN_9
#define USART1_TX_AF                     LL_GPIO_AF_7
#define USART1_RX_GPIO_CLK_ENABLE()      LL_AHB2_GRP1_EnableClock(LL_AHB2_GRP1_PERIPH_GPIOA);
#define USART1_RX_GPIO_PORT              GPIOA
#define USART1_RX_PIN                    LL_GPIO_PIN_10
#define USART1_RX_AF                     LL_GPIO_AF_7
#define USART2_CLK_ENABLE()              LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_USART2);
#define USART2_TX_GPIO_CLK_ENABLE()      LL_AHB2_GRP1_EnableClock(LL_AHB2_GRP1_PERIPH_GPIOA);
#define USART2_TX_GPIO_PORT              GPIOA
#define USART2_TX_PIN                    LL_GPIO_PIN_2
#define USART2_TX_AF                     LL_GPIO_AF_7
#define USART2_RX_GPIO_CLK_ENABLE()      LL_AHB2_GRP1_EnableClock(LL_AHB2_GRP1_PERIPH_GPIOA);
#define USART2_RX_GPIO_PORT              GPIOA
#define USART2_RX_PIN                    LL_GPIO_PIN_3
#define USART2_RX_AF                     LL_GPIO_AF_7
#define USART3_CLK_ENABLE()              LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_USART3);
#define USART3_TX_GPIO_CLK_ENABLE()      LL_AHB2_GRP1_EnableClock(LL_AHB2_GRP1_PERIPH_GPIOD);
#define USART3_TX_GPIO_PORT              GPIOD

UART_T *ComToUart(COM_PORT_E _ucPort)
{
	if (_ucPort == COM1)
	{
		#if UART1_FIFO_EN == 1
			return &g_tUart1;
		#else
			return 0;
		#endif
	}
	else if (_ucPort == COM2)
	{
		#if UART2_FIFO_EN == 1
			return &g_tUart2;
		#else
			return 0;
		#endif
	}
	else if (_ucPort == COM3)
	{
		#if UART3_FIFO_EN == 1
			return &g_tUart3;
		#else
			return 0;
		#endif
	}
	else if (_ucPort == COM4)
	{
		#if UART4_FIFO_EN == 1
			return &g_tUart4;
		#else
			return 0;
		#endif
	}
	else
	{
		Error_Handler(__FILE__, __LINE__);
		return 0;
	}
}

void comSetBaud(COM_PORT_E _ucPort, uint32_t _BaudRate)
{
	USART_TypeDef* USARTx;
	
	USARTx = ComToUSARTx(_ucPort);
	if (USARTx == 0)
	{
		return;
	}
	
	bsp_SetUartParam(USARTx,  _BaudRate, LL_USART_PARITY_NONE, LL_USART_DIRECTION_TX_RX);
}

void bsp_SetUartParam(USART_TypeDef *Instance,  uint32_t BaudRate, uint32_t Parity, uint32_t Mode)
{
	LL_USART_InitTypeDef UartHandle;	
	
	/*##-1- 配置串口硬件参数 ######################################*/
	/* 异步串口模式 (UART Mode) */
	/* 配置如下:
	  - 字长    = 8 位
	  - 停止位  = 1 个停止位
	  - 校验    = 参数Parity
	  - 波特率  = 参数BaudRate
	  - 硬件流控制关闭 (RTS and CTS signals) */
	UartHandle.BaudRate				 = BaudRate;
	UartHandle.DataWidth			 = LL_USART_DATAWIDTH_8B;
	UartHandle.StopBits				 = LL_USART_STOPBITS_1;
	UartHandle.Parity				 = Parity;
	UartHandle.TransferDirection	 = Mode;
	UartHandle.HardwareFlowControl	 = LL_USART_HWCONTROL_NONE;
	UartHandle.OverSampling 		 = LL_USART_OVERSAMPLING_16;
	
	if (LL_USART_Init(Instance, &UartHandle) != SUCCESS)
	{
		Error_Handler(__FILE__, __LINE__);
	}
	
	LL_USART_Enable(Instance);
}

static void InitHardUart(void)
{
	LL_GPIO_InitTypeDef  GPIO_InitStruct;


#if UART1_FIFO_EN == 1		/* 串口1 */
	/* 使能 GPIO TX/RX 时钟 */
	USART1_TX_GPIO_CLK_ENABLE();
	USART1_RX_GPIO_CLK_ENABLE();
	
	/* 使能 USARTx 时钟 */
	USART1_CLK_ENABLE();	

	/* 配置TX引脚 */
	GPIO_InitStruct.Pin      	 = USART1_TX_PIN;
	GPIO_InitStruct.Mode     	 = LL_GPIO_MODE_ALTERNATE;
	GPIO_InitStruct.Pull     	 = LL_GPIO_PULL_UP;
	GPIO_InitStruct.Speed    	 = LL_GPIO_SPEED_FREQ_HIGH;
	GPIO_InitStruct.Alternate	 = USART1_TX_AF;
	GPIO_InitStruct.OutputType	 = LL_GPIO_OUTPUT_PUSHPULL;
	
	LL_GPIO_Init(USART1_TX_GPIO_PORT, &GPIO_InitStruct);	
	
	/* 配置RX引脚 */
	GPIO_InitStruct.Pin = USART1_RX_PIN;
	GPIO_InitStruct.Alternate = USART1_RX_AF;
	LL_GPIO_Init(USART1_RX_GPIO_PORT, &GPIO_InitStruct);

	/* 配置NVIC the NVIC for UART */   
	NVIC_SetPriority(USART2_IRQn, NVIC_EncodePriority(NVIC_GetPriorityGrouping(),0, 2));
	NVIC_EnableIRQ(USART2_IRQn);
  
	/* 配置波特率、奇偶校验 */
	bsp_SetUartParam(USART1,  UART1_BAUD, LL_USART_PARITY_NONE, LL_USART_DIRECTION_TX_RX);

	CLEAR_BIT(USART1->ICR, USART_ICR_TCCF);   /* 清除TC发送完成标志 */
    CLEAR_BIT(USART1->RQR, USART_RQR_RXFRQ); /* 清除RXNE接收标志 */
	// USART_CR1_PEIE | USART_CR1_RXNEIE
	SET_BIT(USART1->CR1, USART_CR1_RXNEIE);	/* 使能PE. RX接受中断 */
#endif

#if UART2_FIFO_EN == 1		/* 串口2 */
	/* 使能 GPIO TX/RX 时钟 */
	USART2_TX_GPIO_CLK_ENABLE();
	USART2_RX_GPIO_CLK_ENABLE();
	
	/* 使能 USARTx 时钟 */
	USART2_CLK_ENABLE();	

	/* 配置TX引脚 */
	GPIO_InitStruct.Pin			 = USART2_TX_PIN;
	GPIO_InitStruct.Mode		 = LL_GPIO_MODE_ALTERNATE;
	GPIO_InitStruct.Pull		 = LL_GPIO_PULL_UP;
	GPIO_InitStruct.Speed		 = LL_GPIO_SPEED_FREQ_HIGH;
	GPIO_InitStruct.Alternate	 = USART2_TX_AF;
	GPIO_InitStruct.OutputType	 = LL_GPIO_OUTPUT_PUSHPULL;
	LL_GPIO_Init(USART2_TX_GPIO_PORT, &GPIO_InitStruct);	
	
	/* 配置RX引脚 */
	GPIO_InitStruct.Pin = USART2_RX_PIN;
	GPIO_InitStruct.Alternate = USART2_RX_AF;
	LL_GPIO_Init(USART2_RX_GPIO_PORT, &GPIO_InitStruct);

	/* 配置NVIC the NVIC for UART */   
	NVIC_SetPriority(USART2_IRQn, NVIC_EncodePriority(NVIC_GetPriorityGrouping(),0, 2));
	NVIC_EnableIRQ(USART2_IRQn);
  
	/* 配置波特率、奇偶校验 */
	bsp_SetUartParam(USART2,  UART2_BAUD, LL_USART_PARITY_NONE, LL_USART_DIRECTION_TX_RX);
	
	CLEAR_BIT(USART1->ICR, USART_ICR_TCCF);   /* 清除TC发送完成标志 */
    CLEAR_BIT(USART1->RQR, USART_RQR_RXFRQ); /* 清除RXNE接收标志 */
	SET_BIT(USART2->CR1, USART_CR1_RXNEIE);	/* 使能PE. RX接受中断 */
#endif

#if UART3_FIFO_EN == 1			/* 串口3 */
	/* 使能 GPIO TX/RX 时钟 */
	USART3_TX_GPIO_CLK_ENABLE();
	USART3_RX_GPIO_CLK_ENABLE();
	
	/* 使能 USARTx 时钟 */
	USART3_CLK_ENABLE();	

	/* 配置TX引脚 */
	GPIO_InitStruct.Pin			 = USART3_TX_PIN;
	GPIO_InitStruct.Mode		 = GPIO_MODE_AF_PP;
	GPIO_InitStruct.Pull		 = GPIO_PULLUP;
	GPIO_InitStruct.Speed		 = GPIO_SPEED_FREQ_VERY_HIGH;
	GPIO_InitStruct.Alternate	 = USART3_TX_AF;
	GPIO_InitStruct.OutputType	 = LL_GPIO_OUTPUT_PUSHPULL;
	HAL_GPIO_Init(USART3_TX_GPIO_PORT, &GPIO_InitStruct);	
	
	/* 配置RX引脚 */
	GPIO_InitStruct.Pin = USART3_RX_PIN;
	GPIO_InitStruct.Alternate = USART3_RX_AF;
	HAL_GPIO_Init(USART3_RX_GPIO_PORT, &GPIO_InitStruct);

	/* 配置NVIC the NVIC for UART */   
	NVIC_SetPriority(USART2_IRQn, NVIC_EncodePriority(NVIC_GetPriorityGrouping(),0, 2));
	NVIC_EnableIRQ(USART2_IRQn);
  
	/* 配置波特率、奇偶校验 */
	bsp_SetUartParam(USART3,  UART3_BAUD, LL_USART_PARITY_NONE, LL_USART_DIRECTION_TX_RX);

	CLEAR_BIT(USART1->ISR, USART_ISR_TC);   /* 清除TC发送完成标志 */
    CLEAR_BIT(USART1->ISR, USART_ISR_RXNE); /* 清除RXNE接收标志 */
	SET_BIT(USART3->CR1, USART_CR1_RXNEIE);	/* 使能PE. RX接受中断 */
#endif

#if UART4_FIFO_EN == 1
	/* 使能 GPIO TX/RX 时钟 */
	UART4_TX_GPIO_CLK_ENABLE();
	UART4_RX_GPIO_CLK_ENABLE();
	
	/* 使能 USARTx 时钟 */
	UART4_CLK_ENABLE();	

	/* 配置TX引脚 */
	GPIO_InitStruct.Pin			 = UART4_TX_PIN;
	GPIO_InitStruct.Mode		 = GPIO_MODE_AF_PP;
	GPIO_InitStruct.Pull		 = GPIO_PULLUP;
	GPIO_InitStruct.Speed		 = GPIO_SPEED_FREQ_VERY_HIGH;
	GPIO_InitStruct.Alternate	 = UART4_TX_AF;
	GPIO_InitStruct.OutputType	 = LL_GPIO_OUTPUT_PUSHPULL;
	HAL_GPIO_Init(UART4_TX_GPIO_PORT, &GPIO_InitStruct);	
	
	/* 配置RX引脚 */
	GPIO_InitStruct.Pin = UART4_RX_PIN;
	GPIO_InitStruct.Alternate = UART4_RX_AF;
	HAL_GPIO_Init(UART4_RX_GPIO_PORT, &GPIO_InitStruct);

	/* 配置NVIC the NVIC for UART */   
	NVIC_SetPriority(USART2_IRQn, NVIC_EncodePriority(NVIC_GetPriorityGrouping(),0, 2));
	NVIC_EnableIRQ(USART2_IRQn);
  
	/* 配置波特率、奇偶校验 */
	bsp_SetUartParam(UART4,  UART4_BAUD, LL_USART_PARITY_NONE, LL_USART_DIRECTION_TX_RX);

	CLEAR_BIT(USART1->ISR, USART_ISR_TC);   /* 清除TC发送完成标志 */
    CLEAR_BIT(USART1->ISR, USART_ISR_RXNE); /* 清除RXNE接收标志 */
	SET_BIT(UART4->CR1, USART_CR1_RXNEIE);	/* 使能RX接受中断 */
#endif

}

static void UartIRQ(UART_T *_pUart)
{
	uint32_t isrflags   = READ_REG(_pUart->uart->ISR);
	uint32_t cr1its     = READ_REG(_pUart->uart->CR1);
	uint32_t cr3its     = READ_REG(_pUart->uart->CR3);
	
	/* 处理接收中断  */
	if ((isrflags & USART_ISR_RXNE_RXFNE) != RESET)
	{
		/* 从串口接收数据寄存器读取数据存放到接收FIFO */
		uint8_t ch;

		ch = READ_REG(_pUart->uart->RDR);
		_pUart->pRxBuf[_pUart->usRxWrite] = ch;
		if (++_pUart->usRxWrite >= _pUart->usRxBufSize)
		{
			_pUart->usRxWrite = 0;
		}
		if (_pUart->usRxCount < _pUart->usRxBufSize)
		{
			_pUart->usRxCount++;
		}

		/* 回调函数,通知应用程序收到新数据,一般是发送1个消息或者设置一个标记 */
		//if (_pUart->usRxWrite == _pUart->usRxRead)
		//if (_pUart->usRxCount == 1)
		{
			if (_pUart->ReciveNew)
			{
				_pUart->ReciveNew(ch); /* 比如，交给MODBUS解码程序处理字节流 */
			}
		}
	}

	/* 处理发送缓冲区空中断 */
	if ( ((isrflags & USART_ISR_TXE_TXFNF) != RESET) && (cr1its & USART_CR1_TXEIE) != RESET)
	{
		//if (_pUart->usTxRead == _pUart->usTxWrite)
		if (_pUart->usTxCount == 0)
		{
			/* 发送缓冲区的数据已取完时， 禁止发送缓冲区空中断 （注意：此时最后1个数据还未真正发送完毕）*/
			//USART_ITConfig(_pUart->uart, USART_IT_TXE, DISABLE);
			CLEAR_BIT(_pUart->uart->CR1, USART_CR1_TXEIE);

			/* 使能数据发送完毕中断 */
			//USART_ITConfig(_pUart->uart, USART_IT_TC, ENABLE);
			SET_BIT(_pUart->uart->CR1, USART_CR1_TCIE);
		}
		else
		{
			_pUart->Sending = 1;
			
			/* 从发送FIFO取1个字节写入串口发送数据寄存器 */
			//USART_SendData(_pUart->uart, _pUart->pTxBuf[_pUart->usTxRead]);
			_pUart->uart->TDR = _pUart->pTxBuf[_pUart->usTxRead];
			if (++_pUart->usTxRead >= _pUart->usTxBufSize)
			{
				_pUart->usTxRead = 0;
			}
			_pUart->usTxCount--;
		}

	}
	/* 数据bit位全部发送完毕的中断 */
	if (((isrflags & USART_ISR_TC) != RESET) && ((cr1its & USART_CR1_TCIE) != RESET))
	{
		//if (_pUart->usTxRead == _pUart->usTxWrite)
		if (_pUart->usTxCount == 0)
		{
			/* 如果发送FIFO的数据全部发送完毕，禁止数据发送完毕中断 */
			//USART_ITConfig(_pUart->uart, USART_IT_TC, DISABLE);
			CLEAR_BIT(_pUart->uart->CR1, USART_CR1_TCIE);

			/* 回调函数, 一般用来处理RS485通信，将RS485芯片设置为接收模式，避免抢占总线 */
			if (_pUart->SendOver)
			{
				_pUart->SendOver();
			}
			
			_pUart->Sending = 0;
		}
		else
		{
			/* 正常情况下，不会进入此分支 */

			/* 如果发送FIFO的数据还未完毕，则从发送FIFO取1个数据写入发送数据寄存器 */
			//USART_SendData(_pUart->uart, _pUart->pTxBuf[_pUart->usTxRead]);
			_pUart->uart->TDR = _pUart->pTxBuf[_pUart->usTxRead];
			if (++_pUart->usTxRead >= _pUart->usTxBufSize)
			{
				_pUart->usTxRead = 0;
			}
			_pUart->usTxCount--;
		}
	}
}
